fix(manipulationEntertainers): blocks alignments, refresh logic

--- a/client/app/components/main/main.scss
+++ b/client/app/components/main/main.scss
@@ -7,6 +7,7 @@
   .main-pages {
     display: block;
     position: relative;
+    background-color: $DarkJungleGreen;
 
     .page-name {
       color: white;
